HYDRADEV 72: remove set height so that covers display at the correct aspect ratio on search results

--- a/app/assets/stylesheets/cornell/_search_results.css.scss
+++ b/app/assets/stylesheets/cornell/_search_results.css.scss
@@ -26,7 +26,7 @@ h2 {
 .book-cover {
 	float: left;
 	margin-right: 1em;
-	height: 120px;
+	// height: 120px;
 	width:70px
 }
 
